--- a/src/site/_variables.scss
+++ b/src/site/_variables.scss
@@ -8,8 +8,8 @@ $font-height:           1.5;
 //== Color
 
 $color-foreground:      #202020;
-$color-background:     pink;
-$color-link:            #2020E0;
+$color-background:    #e030d8;
+$color-link:            #16c23b;
 
 //== Grid
 
